can archive projects

--- a/views/projects.hbs
+++ b/views/projects.hbs
@@ -37,6 +37,9 @@
                                 <a href="#terms" class="modal-trigger">
                                     <span class="btn-small">See More</span>
                                 </a>
+                                <div class="delete_button">
+                                    <a href="archive-project/{{this.project_id}}" class="btn waves-effect waves-light">Archive</a>
+                                </div>
                             </div>
                         </div>
                 </div>
