--- a/views/archive.hbs
+++ b/views/archive.hbs
@@ -153,8 +153,8 @@
                             <td>{{this.shelf}}</td>
                             <td>
                                 <div class="delete_button">
-                                <a href="unarchive-ingredient/{{this.ingredient_id}}" class="btn waves-effect waves-light">Unarchive</a>
-                            </div>
+                                    <a href="unarchive-ingredient/{{this.ingredient_id}}" class="btn waves-effect waves-light">Unarchive</a>
+                                </div>
                         </td>
                         </tr>
                         {{/each}}
@@ -163,7 +163,84 @@
 
                     </div>
                     <div id="projects" class="col s12">Projects
-                        <p>All inactive projects here.</p>
+                        {{#each results}}
+                            <div class="row">
+                                <div class="col s7 m6 l6">
+                                    {{!-- <a href="#terms" class="modal-trigger"> --}}
+                                        <div class="card blue-grey darken-1">
+                                            <div class="card-content white-text">
+                                                {{!-- projects/{{this.project_name}} --}}
+                                                <span class="card-title"><a
+                                                        href="/projects/{{this.project_id}}">{{this.project_name}}</a></span>
+                                                <p>Client: {{this.client}}</p>
+                                                <p>{{this.date}}</p>
+                                                <div class="col s12">&nbsp;</div>
+                                                <a href="#terms" class="modal-trigger">
+                                                    <span class="btn-small">See More</span>
+                                                </a>
+                                                <div class="delete_button">
+                                                    <a href="unarchive-project/{{this.project_id}}" class="btn waves-effect waves-light">Unarchive</a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                </div>
+                                {{!-- </a> --}}
+
+                                <div class="modal" id="terms">
+                                    <div class="row">
+                                        <div class="col s12">&nbsp;</div>
+                                        <div class="col s12"><b><font size="+2">{{this.project_name}}</font></b></div>
+                                        <div class="col s12">&nbsp;</div>
+                                        <div class="col s6">
+                                            <span><b>Client:</b> {{this.client}}<br></br><b>Date:</b> {{this.date}}</span>
+                                        </div>
+                                        <div class="col s6">
+                                            <span><b>Number of Formulas:</b> 3<br></br><b>Other: </b>Information</span>
+                                        </div>
+                                        <div class="col s12">&nbsp;</div>
+                                        {{!-- <div class="col s12 m6 l3">
+                                            <p></p>
+                                        </div>
+                                        <div class="col s12 m6 l3">
+                                            <p></p>
+                                        </div> --}}
+
+                                        <div class="col s12 m6 l3">
+                                            <p></p>
+                                            <div class="delete_button">
+                                                <a href="" class="btn-small">Edit</a>
+                                            </div>
+                                        </div>
+                                        <div class="col s12 m6 l3">
+                                            <p></p>
+                                            <div class="delete_button">
+                                                <a href="" class="btn-small">Delete</a>
+                                            </div>
+                                        </div>
+                                        <div class="col s12 m6 l3">
+                                            <p></p>
+                                            <div class="open_button">
+                                                <a href="/formulas" class="btn-small">Open</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            
+                            <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+                            
+                            <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
+                            
+                            <script>
+                                $(document).ready(function () {
+                                    $('.modal').modal();
+                                })
+                            </script>
+
+                            <div class="card-action"></div>
+
+                            {{/each}}
+
                     </div>
                 </div>
             
