projects archive/unarchive works

--- a/views/archive.hbs
+++ b/views/archive.hbs
@@ -163,7 +163,7 @@
 
                     </div>
                     <div id="projects" class="col s12">Projects
-                        {{#each results}}
+                        {{#each project_results}}
                             <div class="row">
                                 <div class="col s7 m6 l6">
                                     {{!-- <a href="#terms" class="modal-trigger"> --}}
