--- a/views/error.hbs
+++ b/views/error.hbs
@@ -9,7 +9,7 @@
     <body>
         <!-- https://materializecss.com/cards.html -->
         <div style="padding:20px">
-            <h1>ERROR!</h1>
+            <h1>Silly!</h1>
         </div>
     
     </body>
