--- a/views/inventory.hbs
+++ b/views/inventory.hbs
@@ -63,6 +63,12 @@
                 <option value="13">Distilled Water/Ethyl Alcohol</option>
             </select>
 
+            <script>
+                $('input.browser-default').on('change', function() {
+                    console.log($(this).val());
+                });
+            </script>
+
             <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
             <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
             
