inventory dropdown + other

--- a/views/formulas.hbs
+++ b/views/formulas.hbs
@@ -46,8 +46,8 @@
                 </div>
                 
                 <div class="row">
-                <div id="trial{{trial_num}}" class = "col s12 m4 l5">
-                    <table>
+                <div style="overflow-x: scroll;" id="trial{{trial_num}}" class = "col s12 m4 l6">
+                    <table class="scrollable">
                         <tr>
                             <th>Phase</th>
                             <th>Ingredient</th>
@@ -69,8 +69,8 @@
              
         
                 
-                <div id="2trial{{trial_num}}" class = "col s12 m4 l4">
-                    <table>
+                <div style="overflow-x: scroll;" id="2trial{{trial_num}}" class = "col s12 m4 l6">
+                    <table class="scrollable">
                         <tr>
                             <th>Phase</th>
                             <th>Ingredient</th>
