inventory updates (color, selector, etc.)

--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -49,3 +49,8 @@ th {
     .sidenav {padding-top: 15px;}
     .sidenav a {font-size: 18px;}
 }
+
+.luluble-pink {
+    background-color: #e700a2 !important;
+    /* box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12) !important; */
+}
