--- a/public/partials/logout.hbs
+++ b/public/partials/logout.hbs
@@ -6,7 +6,7 @@
 
         </head>
 <div class="logoutButton">
-                <a class = "waves-effect waves-light btn-small" class="logout" href="/logout">Log Out </a>
-                <a style = ".pink_button"></a>
+                <a class = "waves-effect waves-light btn-small luluble-pink" class="logout" href="/logout">Log Out </a>
+                {{!-- <a style = ".pink_button"></a> --}}
                 {{!-- <a class="logout" href="/logout">Log Out</a> --}}
 </div>
