--- a/public/partials/navbar.hbs
+++ b/public/partials/navbar.hbs
@@ -18,7 +18,7 @@
                 </div>
                 <span style="color:#000000" class="large material-icons">local_florist
                 </span>
-                <span style="color:#25b5af"><b><font size="+2">&nbsp;tuluble database</font></b></span>
+                <span style="color:#e700a2"><b><font size="+2">&nbsp;tuluble database</font></b></span>
                 <a href="#" data-target="side_nav"></a>
                 {{!-- <a href="#email"><span class="email white-text">web@gmail.com</span></a> --}}
             </div>
@@ -32,7 +32,7 @@
 
     {{!-- <a href="#" data-target="mysidenav" class="btn sidenav-trigger">Sidenav</a> --}}
 
-    <a href="#" data-target="mysidenav" class="btn sidenav-trigger">
+    <a href="#" data-target="mysidenav" class="btn luluble-pink sidenav-trigger">
         <i class="material-icons">menu</i>
         <span class="blue-text text-darken-2"></span>
     </a>
