--- a/views/archive.hbs
+++ b/views/archive.hbs
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="/styles/archive.css">
 
 </head>
 
@@ -27,7 +28,7 @@
                             
                             <span style="color:#000000" class="large material-icons">local_florist
                             </span>
-                            <span style="color:#25b5af"><b><font size="+2">&nbsp;tuluble database</font></b></span>
+                            <span style="color:#e700a2"><b><font size="+2">&nbsp;tuluble database</font></b></span>
                             
                             <a href="#" data-target="side_nav"></a>
                             {{!-- <a href="#email"><span class="email white-text">web@gmail.com</span></a> --}}
@@ -42,7 +43,7 @@
 
                 {{!-- <a href="#" data-target="mysidenav" class="btn sidenav-trigger">Sidenav</a> --}}
 
-                <a href="#" data-target="mysidenav" class="btn sidenav-trigger">
+                <a href="#" data-target="mysidenav" class="btn luluble-pink sidenav-trigger">
                     <i class="material-icons">menu</i>
                     <span class="blue-text text-darken-2"></span>
                 </a>
@@ -153,7 +154,7 @@
                             <td>{{this.shelf}}</td>
                             <td>
                                 <div class="delete_button">
-                                    <a href="unarchive-ingredient/{{this.ingredient_id}}" class="btn waves-effect waves-light">Unarchive</a>
+                                    <a href="unarchive-ingredient/{{this.ingredient_id}}" class="btn waves-effect waves-light luluble-pink">Unarchive</a>
                                 </div>
                         </td>
                         </tr>
@@ -254,46 +255,4 @@
         </div>
         </div>
     </body>
-    
-    <!-- FOOTER -->
-    <footer class="page-footer grey darken-1">
-            <div class="container">
-                <div class="row">
-                    <div class="col s12 l6">
-                        <h5>About luluble</h5>
-                        <p>Boutique laboratory focused on innovative thinking in product development.
-                            Offer full-service development from “concept to counter”</p>
-                    </div>
-                    <div class="col s12 l4 offset-l2">
-                        <h5>Connect</h5>
-                        <ul>
-                            <li>
-                                {{!-- <span class="large material-icons">open_in_browser</span> --}}
-                                <a href="https://www.luluble.com/" class="grey-text text-lighten-3">Website</a>
-                            </li>
-                            <li>
-                                {{!-- <span class="large material-icons">open_in_browser</span> --}}
-                                <a href="https://www.instagram.com/luluble_inc/?igshid=zkxn18fwn7fy"
-                                    class="grey-text text-lighten-3">Instagram</a>
-                            </li>
-                            <li>
-                                {{!-- <span class="large material-icons">open_in_browser</span> --}}
-                                <a href="https://www.pinterest.com/luluble_inc/"
-                                    class="grey-text text-lighten-3">Pinterest</a>
-                            </li>
-                            <li>
-                                {{!-- <span class="large material-icons">open_in_browser</span> --}}
-                                <a href="https://www.linkedin.com/company/luluble/about/"
-                                    class="grey-text text-lighten-3">LinkedIn</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-            <div class="footer-copyright grey darken-4">
-                <div class="container center-align">&copy; 2022 tuluble</div>
-            </div>
-        </footer>
-
-
 </html>
