--- a/views/index.hbs
+++ b/views/index.hbs
@@ -27,7 +27,7 @@
             <div id="main" style="padding: 0% 2% 0% 2%">
             <!-- https://materializecss.com/cards.html -->
                 <center>            
-                    <h1 id="title" style="color:#50baa4">Welcome {user}!
+                    <h1 id="title" style="color:#e700a2">Welcome {user}!
                     {{!-- <p style="color:#fa82be" > </p> --}}
                         <span style= "col
                         or:#000000" class="large material-icons">local_florist
@@ -48,7 +48,7 @@
 
                 </center>
 
-                <h3 style="color:#50baa4">Notifications</h3>
+                <h3 style="color:#e700a2">Notifications</h3>
 
                 <center>
 
