--- a/views/inventory.hbs
+++ b/views/inventory.hbs
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="/partials/color.css">
 
 </head>
 
@@ -17,9 +18,6 @@
         {{> navbar}}
 
         {{> logout}}
-    </div>
-    <div style="padding: 2% 2% 0% 2%">
-
     </div>
 
 
@@ -39,7 +37,7 @@
     </div> --}}
 
     <!-- ROW OF BUTTONS AND SEARCH BAR -->
-    <div class="row">
+    <div style="padding: 2% 2% 2% 1%" class="row">
         <div class="col s12">
             <p></p>
             <h1 id="inventoryTitle">Inventory </h1>
@@ -65,7 +63,7 @@
 
 
         <div class="col s12 m4 l2">
-            <a href="#terms" class="btn orange modal-trigger">Add</a>
+            <a href="#terms" class="btn waves-effect waves-light luluble-pink modal-trigger">Add</a>
             <div class="modal" id="terms">
                 <div style="padding: 5% 5% 5% 5%">
                     {{!-- <b><span>Add a New Ingredient</span></b> --}}
@@ -77,19 +75,16 @@
                         {{!-- Field 1 --}}
                         <b><label for="tuluble">INCI Name:</label></b>
                         <input type="text" id="userInput1" placeholder="Enter INCI Name" maxlength="20">
-
                         <p> </p>
 
                         {{!-- Field 2 --}}
                         <b><label for="tuluble">Trade Name:</label></b>
                         <input type="text" id="userInput2" placeholder="Enter Trade Name" maxlength="20">
-
                         <p> </p>
 
                         {{!-- Field 3 --}}
                         <b><label for="tuluble">Amount Available:</label></b>
                         <input type="number" id="userInput3" placeholder="Enter Amount" maxlength="20">
-
                         <p> </p>
 
                         {{!-- Field 4 --}}
@@ -98,27 +93,27 @@
                         <p> </p>
 
                         <b><label for="tuluble">Classifier:</label></b>
-                        <input type="text" id="userInput5" placeholder="Enter Shelf" maxlength="20">
+                        <input type="text" id="userInput5" placeholder="Enter Classifier" maxlength="20">
                         <p> </p>
 
                         <b><label for="tuluble">Lot Number:</label></b>
-                        <input type="text" id="userInput6" placeholder="Enter Shelf" maxlength="20">
+                        <input type="text" id="userInput6" placeholder="Enter Lot Number" maxlength="20">
                         <p> </p>
 
                         <b><label for="tuluble">Date Recieved:</label></b>
-                        <input type="date" id="userInput7" placeholder="Enter Shelf" maxlength="20">
+                        <input type="date" id="userInput7" placeholder="Enter Date Received" maxlength="20">
                         <p> </p>
 
                         <b><label for="tuluble">Supplier:</label></b>
-                        <input type="date" id="userInput8" placeholder="Enter Shelf" maxlength="20">
+                        <input type="text" id="userInput8" placeholder="Enter Supplier" maxlength="20">
                         <p> </p>
 
                         <b><label for="tuluble">Unit:</label></b>
-                        <input type="date" id="userInput9" placeholder="Enter Shelf" maxlength="20">
+                        <input type="text" id="userInput9" placeholder="Enter Unit" maxlength="20">
                         <p> </p>
 
                         <div class="add_button">
-                            <a id="add_button" href="inventoryformsubmit/{{inputValue1}}/{{inputValue2}}/{{inputValue3}}" class="btn waves-effect waves-light">Add Ingredient</a>
+                            <a id="add_button" class="btn waves-effect waves-light luluble-pink">Add Ingredient</a>
                         </div>
                         <p> </p>
 
@@ -171,10 +166,16 @@
                 var inputValue7 = $("#userInput7").val();
                 var inputValue8 = $("#userInput8").val();
                 var inputValue9 = $("#userInput9").val();
-                alert(inputValue1+inputValue2);
+                console.log(inputValue1);
+                console.log(inputValue2);
+                console.log(inputValue3);
+                window.location = "inventoryformsubmit/" + inputValue1;
+                //$(window).attr("location", "inventoryformsubmit/" + inputValue1);
                 });
             });
         </script>
+
+        <script src="app.js"></script>
 
         {{!-- dropdown script --}}
         <script>
@@ -224,7 +225,7 @@
         <div class="col s12 m4 l4">
             <p></p>
             <div class="delete_button">
-                <a href="#" class="btn waves-effect waves-light">Delete</a>
+                <a href="#" class="btn waves-effect waves-light luluble-pink">Delete</a>
             </div>
         </div>
         <div class="col s12 m4 l6">
@@ -332,7 +333,7 @@
                     <td>
                         <div class="delete_button">
                             <a href="archive-ingredient/{{this.ingredient_id}}"
-                                class="btn waves-effect waves-light">Archive</a>
+                                class="btn waves-effect waves-light luluble-pink">Archive</a>
                         </div>
                     </td>
 
