--- a/views/projects.hbs
+++ b/views/projects.hbs
@@ -2,10 +2,11 @@
 <html>
 
     <head>
-        <title>Projects</title>
+        <title style="color:#e700a2">Projects</title>
 
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+        <link rel="stylesheet" href="/styles/projects.css">
         <script type="text/javascript" src="/routes/projects.js"></script>
 
     </head>
@@ -26,19 +27,25 @@
             <div class="row">
                 <div class="col s7 m6 l6">
                     {{!-- <a href="#terms" class="modal-trigger"> --}}
-                        <div class="card blue-grey darken-1">
+                        <div class="card luluble-light-pink darken-1">
                             <div class="card-content white-text">
                                 {{!-- projects/{{this.project_name}} --}}
-                                <span class="card-title"><a
-                                        href="/projects/{{this.project_id}}">{{this.project_name}}</a></span>
-                                <p>Client: {{this.client}}</p>
-                                <p>{{this.date}}</p>
+                                <span class="card-title"><a style="color: black;"
+                                        href="/projects/{{this.project_id}}"><b>{{this.project_name}}</a></b></span>
+                                <p style="color: black;">Client: {{this.client}}</p>
+                                <p style="color: black;">{{this.date}}</p>
                                 <div class="col s12">&nbsp;</div>
-                                <a href="#terms" class="modal-trigger">
-                                    <span class="btn-small">See More</span>
-                                </a>
-                                <div class="delete_button">
-                                    <a href="archive-project/{{this.project_id}}" class="btn waves-effect waves-light">Archive</a>
+                                <div class="row">
+                                    <div class = "col s12 m4 l4">
+                                        <a href="#terms" class="modal-trigger">
+                                            <span class="btn-small luluble-light-grey">See More</span>
+                                        </a>
+                                    </div>
+                                    <div class = "col s12 m4 l4">
+                                        <div class="delete_button">
+                                            <a href="archive-project/{{this.project_id}}" class="btn waves-effect waves-light luluble-light-grey">Archive</a>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
