--- a/views/inventory.hbs
+++ b/views/inventory.hbs
@@ -62,6 +62,121 @@
         </div>
 
 
+        <div class="col s12 m4 l2">
+            <a href="#terms" class="btn waves-effect waves-light luluble-pink modal-trigger">Add</a>
+            <div class="modal" id="terms">
+                <div style="padding: 5% 5% 5% 5%">
+                    {{!-- <b><span>Add a New Ingredient</span></b> --}}
+                    <h1 style="font-size:40px;">Add a New Ingredient</h1>
+
+                    <article class="regular">
+                        {{!-- <h2>Textbook</h2> --}}
+
+                        {{!-- Field 1 --}}
+                        <b><label for="tuluble">INCI Name:</label></b>
+                        <input type="text" id="userInput1" placeholder="Enter INCI Name" maxlength="20">
+                        <p> </p>
+
+                        {{!-- Field 2 --}}
+                        <b><label for="tuluble">Trade Name:</label></b>
+                        <input type="text" id="userInput2" placeholder="Enter Trade Name" maxlength="20">
+                        <p> </p>
+
+                        {{!-- Field 3 --}}
+                        <b><label for="tuluble">Amount Available:</label></b>
+                        <input type="number" id="userInput3" placeholder="Enter Amount" maxlength="20">
+                        <p> </p>
+
+                        {{!-- Field 4 --}}
+                        <b><label for="tuluble">Shelf:</label></b>
+                        <input type="text" id="userInput4" placeholder="Enter Shelf" maxlength="20">
+                        <p> </p>
+
+                        <b><label for="tuluble">Classifier:</label></b>
+                        <input type="text" id="userInput5" placeholder="Enter Classifier" maxlength="20">
+                        <p> </p>
+
+                        <b><label for="tuluble">Lot Number:</label></b>
+                        <input type="text" id="userInput6" placeholder="Enter Lot Number" maxlength="20">
+                        <p> </p>
+
+                        <b><label for="tuluble">Date Recieved:</label></b>
+                        <input type="date" id="userInput7" placeholder="Enter Date Received" maxlength="20">
+                        <p> </p>
+
+                        <b><label for="tuluble">Supplier:</label></b>
+                        <input type="text" id="userInput8" placeholder="Enter Supplier" maxlength="20">
+                        <p> </p>
+
+                        <b><label for="tuluble">Unit:</label></b>
+                        <input type="text" id="userInput9" placeholder="Enter Unit" maxlength="20">
+                        <p> </p>
+
+                        <div class="add_button">
+                            <a id="add_button" class="btn waves-effect waves-light luluble-pink">Add Ingredient</a>
+                        </div>
+                        <p> </p>
+
+                        {{!-- <form>
+                            <input type="text" id="input1">
+                            <button type="button" id="submitBtn">Submit</button>
+                        </form> --}}
+                
+                    </article>
+                </div>
+            </div>
+        </div>
+        {{!-- <script>
+           // document.getElementById("submitBtn").addEventListener("click", function() {
+           //     console.log("Button clicked");
+           //     var inputValue = document.getElementById("input1").value;
+            //    alert(inputValue);
+            }); --}}
+        {{!-- </script> --}}
+
+        <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
+
+        {{!-- <script>
+            //function saveValue() {
+                //var value1 = document.getElementById("userInput1").value;
+                //var value2 = document.getElementById("userInput2").value;
+                //var value3 = document.getElementById("userInput3").value;
+                //var value4 = document.getElementById("userInput4").value;
+
+                //console.log(value1);
+            }
+
+            //var value1 = document.getElementById("userInput1").value;
+            //var value2 = document.getElementById("userInput2").value;
+            //var value3 = document.getElementById("userInput3").value;
+        </script> --}}
+
+        {{!-- clicking new ingredient button --}}
+        <script>
+            $(document).ready(function() {
+                $("#add_button").click(function() {
+                var inputValue1 = $("#userInput1").val();
+                var inputValue2 = $("#userInput2").val();
+                var inputValue3 = $("#userInput3").val();
+                var inputValue4 = $("#userInput4").val();
+                var inputValue5 = $("#userInput5").val();
+                var inputValue6 = $("#userInput6").val();
+                var inputValue7 = $("#userInput7").val();
+                var inputValue8 = $("#userInput8").val();
+                var inputValue9 = $("#userInput9").val();
+                console.log(inputValue1);
+                console.log(inputValue2);
+                console.log(inputValue3);
+                window.location = "inventoryformsubmit/" + inputValue1;
+                //$(window).attr("location", "inventoryformsubmit/" + inputValue1);
+                });
+            });
+        </script>
+
+        <script src="app.js"></script>
+
         {{!-- dropdown script --}}
         <script>
             const select = document.querySelector('#myDropdown');
@@ -75,20 +190,14 @@
                 if (window.location.href.indexOf("inventory/") !== -1) {
                     window.location.href = selectedOption;
                 }
-
-                document.addEventListener('DOMContentLoaded', function() {
-                    var elems = document.querySelectorAll('browser-default');
-                    var instances = M.FormSelect.init(elems, options);
-                });
-                var instance = M.FormSelect.getInstance(elem);
-                console.log(instance.getSelectedValue());
-
-                $(document).ready(function(){
-
-                    $('browser-default').formSelect();
-                    
-                    $('.modal').modal();
-                });
+                else {
+                    window.location.href = "inventory/" + selectedOption;
+                }
+            });
+            sleep(100);
+            let header = document.getElementById("inventoryTitle");
+            header.innerHTML = "Inventory - " + selectedOption;
+            console.log(header);
 
         </script>
 
@@ -216,6 +325,10 @@
                     <td>{{this.amt}} {{this.unit}}</td>
                     <td>{{this.shelf}}</td>
 
+                    {{!--
+                    {{#if this.amt = 0}}
+                    <td>EMPTY</td>
+                    {{/if}} --}}
 
                     <td>
                         <div class="delete_button">
