--- a/views/inventory.hbs
+++ b/views/inventory.hbs
@@ -69,54 +69,56 @@
                     {{!-- <b><span>Add a New Ingredient</span></b> --}}
                     <h1 style="font-size:40px;">Add a New Ingredient</h1>
 
-                    <article class="regular">
-                        {{!-- <h2>Textbook</h2> --}}
+                    <form method="POST" action="/inventoryformsubmit/{{project.project_id}}">
+                        <article class="regular">
+                            {{!-- <h2>Textbook</h2> --}}
 
-                        {{!-- Field 1 --}}
-                        <b><label for="tuluble">INCI Name:</label></b>
-                        <input type="text" id="userInput1" placeholder="Enter INCI Name" maxlength="20">
-                        <p> </p>
+                            {{!-- Field 1 --}}
+                            <b><label for="tuluble">INCI Name:</label></b>
+                            <input type="text" name = "userInput1" id="userInput1" placeholder="Enter INCI Name" maxlength="20">
+                            <p> </p>
 
-                        {{!-- Field 2 --}}
-                        <b><label for="tuluble">Trade Name:</label></b>
-                        <input type="text" id="userInput2" placeholder="Enter Trade Name" maxlength="20">
-                        <p> </p>
+                            {{!-- Field 2 --}}
+                            <b><label for="tuluble">Trade Name:</label></b>
+                            <input type="text" name = "userInput2" id="userInput2" placeholder="Enter Trade Name" maxlength="20">
+                            <p> </p>
 
-                        {{!-- Field 3 --}}
-                        <b><label for="tuluble">Amount Available:</label></b>
-                        <input type="number" id="userInput3" placeholder="Enter Amount" maxlength="20">
-                        <p> </p>
+                            {{!-- Field 3 --}}
+                            <b><label for="tuluble">Amount Available:</label></b>
+                            <input type="number" name = "userInput3" id="userInput3" placeholder="Enter Amount" maxlength="20">
+                            <p> </p>
 
-                        {{!-- Field 4 --}}
-                        <b><label for="tuluble">Shelf:</label></b>
-                        <input type="text" id="userInput4" placeholder="Enter Shelf" maxlength="20">
-                        <p> </p>
+                            {{!-- Field 4 --}}
+                            <b><label for="tuluble">Shelf:</label></b>
+                            <input type="text" name = "userInput4" id="userInput4" placeholder="Enter Shelf" maxlength="20">
+                            <p> </p>
 
-                        <b><label for="tuluble">Classifier:</label></b>
-                        <input type="text" id="userInput5" placeholder="Enter Classifier" maxlength="20">
-                        <p> </p>
+                            <b><label for="tuluble">Classifier:</label></b>
+                            <input type="text" name = "userInput5" id="userInput5" placeholder="Enter Classifier" maxlength="20">
+                            <p> </p>
 
-                        <b><label for="tuluble">Lot Number:</label></b>
-                        <input type="text" id="userInput6" placeholder="Enter Lot Number" maxlength="20">
-                        <p> </p>
+                            <b><label for="tuluble">Lot Number:</label></b>
+                            <input type="text" name = "userInput6" id="userInput6" placeholder="Enter Lot Number" maxlength="20">
+                            <p> </p>
 
-                        <b><label for="tuluble">Date Recieved:</label></b>
-                        <input type="date" id="userInput7" placeholder="Enter Date Received" maxlength="20">
-                        <p> </p>
+                            <b><label for="tuluble">Date Recieved:</label></b>
+                            <input type="date" name = "userInput7" id="userInput7" placeholder="Enter Date Received" maxlength="20">
+                            <p> </p>
 
-                        <b><label for="tuluble">Supplier:</label></b>
-                        <input type="text" id="userInput8" placeholder="Enter Supplier" maxlength="20">
-                        <p> </p>
+                            <b><label for="tuluble">Supplier:</label></b>
+                            <input type="text" name = "userInput8" id="userInput8" placeholder="Enter Supplier" maxlength="20">
+                            <p> </p>
 
-                        <b><label for="tuluble">Unit:</label></b>
-                        <input type="text" id="userInput9" placeholder="Enter Unit" maxlength="20">
-                        <p> </p>
+                            <b><label for="tuluble">Unit:</label></b>
+                            <input type="text" name = "userInput9" id="userInput9" placeholder="Enter Unit" maxlength="20">
+                            <p> </p>
 
-                        <div class="add_button">
-                            <a id="add_button" class="btn waves-effect waves-light luluble-pink">Add Ingredient</a>
-                        </div>
-                        <p> </p>
-
+                            <div class="add_button">
+                                <button id = "add_button" type="submit">Add Ingredient</button>
+                                {{!-- <a id="add_button" class="btn waves-effect waves-light luluble-pink">Add Ingredient</a> --}}
+                            </div>
+                            <p> </p>
+                        </form>
                         {{!-- <form>
                             <input type="text" id="input1">
                             <button type="button" id="submitBtn">Submit</button>
@@ -169,7 +171,7 @@
                 console.log(inputValue1);
                 console.log(inputValue2);
                 console.log(inputValue3);
-                window.location = "inventoryformsubmit/" + inputValue1;
+                window.location = "/inventoryformsubmit";
                 //$(window).attr("location", "inventoryformsubmit/" + inputValue1);
                 });
             });
@@ -194,7 +196,6 @@
                     window.location.href = "inventory/" + selectedOption;
                 }
             });
-            sleep(100);
             let header = document.getElementById("inventoryTitle");
             header.innerHTML = "Inventory - " + selectedOption;
             console.log(header);
