multiple formulas visible

--- a/views/archive.hbs
+++ b/views/archive.hbs
@@ -47,7 +47,6 @@
                     </ul>
                 </div>
                 <div id="ingredients" class="col s12">
-                    <p>Ingredients</p>
                     {{!-- pull all non active ingredients --}}
                     <table>
                     <tbody>
@@ -114,7 +113,7 @@
                     </table>
 
                     </div>
-                    <div id="projects" class="col s12">Projects
+                    <div id="projects" class="col s12">
                         {{#each project_results}}
                             <div class="row">
                                 <div class="col s7 m6 l6">
