--- a/views/projects.hbs
+++ b/views/projects.hbs
@@ -31,7 +31,7 @@
                             <div class="card-content white-text">
                                 {{!-- projects/{{this.project_name}} --}}
                                 <span class="card-title"><a style="color: black;"
-                                        href="/projects/{{this.project_id}}"><b>{{this.project_name}}</a></b></span>
+                                        href="/projects/{{this.project_id}}/trial1/trial1"><b>{{this.project_name}}</a></b></span>
                                 <p style="color: black;">Client: {{this.client}}</p>
                                 <p style="color: black;">{{this.date}}</p>
                                 <div class="col s12">&nbsp;</div>
