--- a/views/formulas.hbs
+++ b/views/formulas.hbs
@@ -26,15 +26,80 @@
                     <h1>{{project_name}} Formulas </h1>
                     <p><b>Client:</b> {{this.client}}</p>
                     <p><b>Number of Formulas:</b> 2</p>
-                    <h4>Total Amt of Formula: 200g</h4>
                 </div>
-            {{/each}}
+        {{/each}}
+
+
+        <div class="col s12 m4 l2">
+            <a href="#open" class="btn waves-effect waves-light luluble-pink modal-trigger">Add Trial</a>
+
+            <div class="modal" id="open">
+                <div style="padding: 5% 5% 5% 5%">
+                    {{!-- <b><span>Add a New Ingredient</span></b> --}}
+                    <h1 style="font-size:40px;">Add a New Trial</h1>
+
+                    <form method="POST" action="/projects/{{project_id}}/formulaformsubmit">
+                        <article class="regular">
+                            {{!-- <h2>Textbook</h2> --}}
+
+                            {{!-- Field 1 --}}
+                            <b><label for="tuluble">Trial Number:</label></b>
+                            <input type="number" name = "userInput1" id="userInput1" placeholder="Enter Trial Number" maxlength="20">
+                            <p> </p>
+
+                            {{!-- Field 2 --}}
+                            <b><label for="tuluble">Formulator Name:</label></b>
+                            <input type="text" name = "userInput2" id="userInput2" placeholder="Enter Formulator Name" maxlength="20">
+                            <p> </p>
+
+                            {{!-- Field 3 --}}
+                            <b><label for="tuluble">Batch Date:</label></b>
+                            <input type="date" name = "userInput3" id="userInput3" placeholder="Enter Batch Date" maxlength="20">
+                            <p> </p>
+
+                            <div class="add_button">
+                                <button id = "add_button" type="submit">Add Trial</button>
+                                {{!-- <a id="add_button" class="btn waves-effect waves-light luluble-pink">Add Ingredient</a> --}}
+                            </div>
+                            <p> </p>
+                        </form>
+                    
+                
+                    </article>
+                </div>
+            </div>
+        </div>
+
+         <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
+
+
+        {{!-- clicking new ingredient button --}}
+        <script>
+            $(document).ready(function() {
+                $("#add_button").click(function() {
+                var inputValue1 = $("#userInput1").val();
+                var inputValue2 = $("#userInput2").val();
+                var inputValue3 = $("#userInput3").val();
+
+                window.location += "/formulaformsubmit";
+                //$(window).attr("location", "inventoryformsubmit/" + inputValue1);
+                });
+            });
+        </script>
+
+        <script>
+            $(document).ready(function () {
+                $('.modal').modal();
+            })
+        </script>
         
                 <div class="row">
                 <div class="col s6">
-                    <ul class="tabs" id = "two">
+                    <ul class="tabs" id = "one">
                         {{#each formula_data}}
-                        <li class="tab col s3"><a href="#trial{{trial_num}}">Trial {{trial_num}}</a></li>
+                            <li class="tab col s3"><a href="/trial{{trial_num}}">Trial {{trial_num}}</a></li>
                         {{/each}}
                     </ul>
                 </div>
@@ -42,10 +107,70 @@
                 <div class="col s6">
                     <ul class="tabs" id = "two">
                         {{#each formula_data}}
-                        <li class="tab col s3"><a href="#2trial{{trial_num}}">Trial {{trial_num}}</a></li>
+                            <li class="tab col s3"><a href="/trial{{trial_num}}">Trial {{trial_num}}</a></li>
                         {{/each}}
                     </ul>
                 </div>
+
+                <script>
+                    $(document).ready(function(){
+                        $('.tabs').tabs();
+                    });
+                </script>
+
+                <script>
+                    $(document).ready(function() {
+                        //window.location.href += "/trial/{{trial_num}}"
+    
+                        /* $('#one').click(function() {
+                            console.log("Active Tab ONE Div:"+$(".active").attr('href'));
+                        });  
+
+                        $('#two').click(function() {
+                            console.log("Active Tab TWO Div:"+$(".active").attr('href'));
+                        });   */
+
+                        // SOMETHING HERE (OR IN APP.JS CHANGES) MADE THE TABS STOP WORKING. ONCE THOSE WORK TEST THAT THE HREFS ARE CORRECT
+                        $("#one").click(function (e) {
+                            var id = $(e.target).attr("href");
+                            console.log("HELLO");
+
+
+                            console.log(id);
+
+                            let ref = window.location.href.split("/");
+                            let p_id = ref[4];
+                            let val2 = ref[5];
+
+                            console.log(val2);
+                            console.log(p_id);
+                            console.log(ref);
+
+                            let newRef = "projects/" + p_id + id + "/" + val2;
+    
+                            // FIGURE OUT HOW TO CHANGE, NOT JUST ADD ON
+                            window.location.pathname = newRef;
+
+                            
+                        });
+
+                        $("#two").click(function (e) {
+                            var id = $(e.target).attr("href");
+
+                            let ref = window.location.href.split("/");
+                            let p_id = ref[4];
+                            let val1 = ref[5];
+
+                            let newRef = "projects/" + p_id + "/" + val1 + id;
+
+                            window.location.pathname = newRef;
+
+                        });
+
+                        
+                    });
+                                  
+                </script>
                 
                 <div class="row">
                 <div style="overflow-x: scroll;" id="trial{{trial_num}}" class = "col s12 m4 l6">
@@ -54,21 +179,81 @@
                             <th>Phase</th>
                             <th>Ingredient</th>
                             <th>INCI</th>
+                            <th>Lot Number</th>
                             <th>% of Ingredient</th>
                             <th>Total Amt of Ing</th>
                         </tr>
-                        {{#each formula_ingredient_data}}
+                        {{#each trial_data1}}
+                            <p>Batch date: {{batch_date}}</p>
+                            <p>Formulator: {{formulator}}</p>
+                            <p>Total Amt of Formula: {{s}}</p>
+                        {{/each}}
+
+
+                        {{#each formula_ingredient_data1}}
                             <tr>
                                 <td>{{phase}}</td>
                                 <td>{{trade_name}}</td>
                                 <td>{{inci_name}}</td>
+                                <td>{{lot_num}}</td>
                                 <td>{{percent_of_ingredient}}</td>
                                 <td>{{total_amount}} {{unit}}</td>
                             </tr>
                         {{/each}}
+                    
+                    <td>
+                        <div class="col s12 m4 l2">
+                        <a href="#openIng" class="btn waves-effect waves-light luluble-pink modal-trigger">Add Ingredient</a>
+
+                        <div class="modal" id="openIng">
+                            <div style="padding: 5% 5% 5% 5%">
+                                {{!-- <b><span>Add a New Ingredient</span></b> --}}
+                                <h1 style="font-size:40px;">Add a New Ingredient</h1>
+
+                                {{!-- somehow get the formula of the tab clicked on --}}
+                                <form method="POST" action="/projects/{{project_id}}/1/phaseformsubmit">
+                                    <article class="regular">
+                                        {{!-- <h2>Textbook</h2> --}}
+
+                                        {{!-- Field 1 --}}
+                                        <b><label for="tuluble">Phase:</label></b>
+                                        <input type="text" name = "userInput1" id="userInput1" placeholder="Enter Phase Name" maxlength="20">
+                                        <p> </p>
+
+                                        {{!-- Field 2 --}}
+                                        <b><label for="tuluble">Ingredient:</label></b>
+                                        <input type="text" name = "userInput2" id="userInput2" placeholder="Enter Ingredient Name" maxlength="20">
+                                        <p> </p>
+
+                                        {{!-- Field 3 --}}
+                                        <b><label for="tuluble">Lot Number:</label></b>
+                                        <input type="text" name = "userInput3" id="userInput3" placeholder="Enter Lot Number" maxlength="20">
+                                        <p> </p>
+
+                                        <b><label for="tuluble">Percent of Ingredient:</label></b>
+                                        <input type="number" name = "userInput4" id="userInput4" placeholder="Enter Percent" maxlength="20">
+                                        <p> </p>
+
+                                        <b><label for="tuluble">Total Amount of Ingredient:</label></b>
+                                        <input type="number" name = "userInput5" id="userInput5" placeholder="Enter Total Amount" maxlength="20">
+                                        <p> </p>
+
+                                        <div class="add_trial_button">
+                                            <button id = "add_trial_button" type="submit">Add Trial</button>
+                                            {{!-- <a id="add_button" class="btn waves-effect waves-light luluble-pink">Add Ingredient</a> --}}
+                                        </div>
+                                        <p> </p>
+                                    </form>
+                                </article>
+                            </div>
+                        </div>
+                    </div>
+                    </td>
                     </table>
+
                 </div>
-             
+
+                {{!-- find a way to make the href trial#1/trial#2 to show what each of the tabs have selected --}}
         
                 
                 <div style="overflow-x: scroll;" id="2trial{{trial_num}}" class = "col s12 m4 l6">
@@ -77,18 +262,75 @@
                             <th>Phase</th>
                             <th>Ingredient</th>
                             <th>INCI</th>
+                            <th>Lot Number</th>
                             <th>% of Ingredient</th>
                             <th>Total Amt of Ing</th>
                         </tr>
-                            {{#each formula_ingredient_data}}
+                            {{#each trial_data2}}
+                                <p>Batch date: {{batch_date}}</p>
+                                <p>Formulator: {{formulator}}</p>
+                                <p>Total Amt of Formula: {{s}}</p>
+                            {{/each}}
+
+                            {{#each formula_ingredient_data2}}
                             <tr>
                                 <td>{{phase}}</td>
                                 <td>{{trade_name}}</td>
                                 <td>{{inci_name}}</td>
+                                <td>{{lot_num}}</td>
                                 <td>{{percent_of_ingredient}}</td>
                                 <td>{{total_amount}} {{unit}}</td>
                             </tr>
                             {{/each}}
+                    <td>
+                        <div class="col s12 m4 l2">
+                        <a href="#openIng2" class="btn waves-effect waves-light luluble-pink modal-trigger">Add Ingredient</a>
+
+                        <div class="modal" id="openIng2">
+                            <div style="padding: 5% 5% 5% 5%">
+                                {{!-- <b><span>Add a New Ingredient</span></b> --}}
+                                <h1 style="font-size:40px;">Add a New Ingredient</h1>
+
+                                <form method="POST" action="/phaseformsubmit">
+                                    <article class="regular">
+                                        {{!-- <h2>Textbook</h2> --}}
+
+                                        {{!-- Field 1 --}}
+                                        <b><label for="tuluble">Phase:</label></b>
+                                        <input type="text" name = "userInput1" id="userInput1" placeholder="Enter Trial Number" maxlength="20">
+                                        <p> </p>
+
+                                        {{!-- Field 2 --}}
+                                        <b><label for="tuluble">Ingredient:</label></b>
+                                        <input type="text" name = "userInput2" id="userInput2" placeholder="Enter Formulator Name" maxlength="20">
+                                        <p> </p>
+
+                                        {{!-- Field 3 --}}
+                                        <b><label for="tuluble">Lot Number:</label></b>
+                                        <input type="text" name = "userInput3" id="userInput3" placeholder="Enter Lot Number" maxlength="20">
+                                        <p> </p>
+
+                                        <b><label for="tuluble">Percent of Ingredient:</label></b>
+                                        <input type="number" name = "userInput4" id="userInput3" placeholder="Enter Percent of Ingredient" maxlength="20">
+                                        <p> </p>
+
+                                        <b><label for="tuluble">Total Amount of Ingredient:</label></b>
+                                        <input type="number" name = "userInput5" id="userInput3" placeholder="Enter Total Amount" maxlength="20">
+                                        <p> </p>
+
+                                        <div class="add_trial_button2">
+                                            <button id = "add_trial_button2" type="submit">Add Trial</button>
+                                            {{!-- <a id="add_button" class="btn waves-effect waves-light luluble-pink">Add Ingredient</a> --}}
+                                        </div>
+                                        <p> </p>
+                                    </form>
+                                
+                            
+                                </article>
+                            </div>
+                        </div>
+                    </div>
+                    </td>
                     </table>
                 </div>
 
@@ -99,61 +341,44 @@
                 <script
                     src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"> 
                 </script>
-                <script>
-                    $(document).ready(function(){
-                        $('.tabs').tabs();
-                        console.log("Active Tab:"+$(".active").attr('id'));
-                        console.log("Active Tab Div:"+$(".active").attr('href'));
-                        //window.location.href += "/trial/{{trial_num}}"
-                    });
-                    $('ul.tabs').click(function() {
-                        console.log("Active Tab ONE Div:"+$(".active").attr('href'));
-                    });      
-                    $('ul.tabs').click(function() {
-                        console.log("Active Tab TWO Div:"+$(".active").attr('href'));
-                    });                
-                    
-                </script>
+
+                    <script>
+                        $(document).ready(function() {
+                            $("#add_trial_button").click(function() {
+                            var inputValue1 = $("#userInput1").val();
+                            var inputValue2 = $("#userInput2").val();
+                            var inputValue3 = $("#userInput3").val();
+
+                            window.location.href += "/phaseformsubmit";
+                            //$(window).attr("location", "inventoryformsubmit/" + inputValue1);
+                            });
+                        });
+                    </script>
+
+                    <script>
+                        $(document).ready(function() {
+                            $("#add_trial_button2").click(function() {
+                            var inputValue1 = $("#userInput1").val();
+                            var inputValue2 = $("#userInput2").val();
+                            var inputValue3 = $("#userInput3").val();
+
+                            window.location += "/phaseformsubmit";
+                            //$(window).attr("location", "inventoryformsubmit/" + inputValue1);
+                            });
+                        });
+                    </script>
+
+             
             
-                {{!-- trade_name, inci_name, phase, percent_of_ingredient, total_amount, ingredient.ingredient_id, projects.project_name, projects.project_id, projects.client, projects.date --}}
 
 
             </div>
-            <a href="/projects/create" class="btn-floating btn-large orange fixed-action-btn">
-                <i class="large material-icons">create</i>
-            </a>
+
         </div>
 
-       
+
+        
 
     </body>
 
 </html>
-
-{{!-- <div style="padding:20px">
-    <table>
-        <thead>
-            <tr>
-                <th>ID
-                    <span class="large material-icons">import_export</span>
-                </th>
-                <th>Name
-                    <span class="large material-icons">import_export</span>
-                </th>
-                <th></th>
-            </tr>
-        </thead>
-        <tbody>
-
-            {{#each results}}
-            <tr>
-                <td>{{this.formula_id}}
-
-                </td>
-
-                <td>{{this.test_name}}</td>
-            </tr>
-            {{/each}}
-        </tbody>
-    </table>
-</div> --}}
