--- a/views/formulas.hbs
+++ b/views/formulas.hbs
@@ -198,7 +198,7 @@
                                 <td>{{inci_name}}</td>
                                 <td>{{lot_num}}</td>
                                 <td>{{percent_of_ingredient}}</td>
-                                <td>{{total_amount}} {{unit}}</td>
+                                <td>{{total_amount}}</td>
                             </tr>
                         {{/each}}
                     
@@ -248,8 +248,40 @@
                                 </article>
                             </div>
                         </div>
-                    </div>
+                        </div>
                     </td>
+
+                    <td>
+                        <div class="col s12 m4 l2">
+                        <a href="#makeTrial" class="btn waves-effect waves-light luluble-pink modal-trigger">MAKE TRIAL</a>
+                        <div class="modal" id="makeTrial">
+                            <div style="padding: 5% 5% 5% 5%">
+                                {{!-- <b><span>Add a New Ingredient</span></b> --}}
+                                <h1 style="font-size:40px;">Make Trial {{trial_num}}</h1>
+
+                                {{!-- somehow get the formula of the tab clicked on --}}
+                                <form method="POST" action="/projects/{{project_id}}/{{trial_num}}/makeformsubmit">
+                                    <article class="regular">
+                                        {{!-- <h2>Textbook</h2> --}}
+
+                                        {{!-- Field 1 --}}
+                                        <b><label for="tuluble">Quantity ({{unit}}):</label></b>
+                                        <input type="range" min = "0" max = "100" name = "userInput1" id="userInput1">
+                                        <p> </p>
+                                        {{!-- USE MATH IN SQL TO FIND MAX VAL --}}
+
+                                       
+                                        <div class="make_trial_button">
+                                            <button id = "make_trial_button" type="submit">Make Trial</button>
+                                            {{!-- <a id="add_button" class="btn waves-effect waves-light luluble-pink">Add Ingredient</a> --}}
+                                        </div>
+                                        <p> </p>
+                                    </form>
+                                </article>
+                            </div>
+                        </div>
+                    </td>
+
                     </table>
 
                 </div>
@@ -332,6 +364,69 @@
                         </div>
                     </div>
                     </td>
+
+                    <td>
+                        <div class="col s12 m4 l2">
+                        <a href="#makeTrial2" class="btn waves-effect waves-light luluble-pink modal-trigger">MAKE TRIAL</a>
+                        <div class="modal" id="makeTrial2">
+                            <div style="padding: 5% 5% 5% 5%">
+                                {{!-- <b><span>Add a New Ingredient</span></b> --}}
+                                <h1 style="font-size:40px;">Make Trial {{trial_num}}</h1>
+
+                                {{!-- somehow get the formula of the tab clicked on --}}
+                                <form method="POST" action="/projects/{{project_id}}/{{trial_num}}/makeformsubmit">
+                                    <article class="regular">
+                                        {{!-- <h2>Textbook</h2> --}}
+
+                                        {{!-- Field 1 --}}
+                                        <b><label for="tuluble">Quantity ({{unit}}):</label></b>
+                                        <input type="range" min = "0" max = "100" name = "userInput1" id="userInput1">
+                                        <p> </p>
+                                        {{!-- USE MATH IN SQL TO FIND MAX VAL --}}
+
+                                       
+                                        <div class="make_trial_button">
+                                            <button id = "make_trial_button2" type="submit">Make Trial</button>
+                                            {{!-- <a id="add_button" class="btn waves-effect waves-light luluble-pink">Add Ingredient</a> --}}
+                                        </div>
+                                        <p> </p>
+                                    </form>
+                                </article>
+                            </div>
+                        </div>
+                    </td>
+
+                    <td>
+                        <div class="col s12 m4 l2">
+                        <a href="#printTrial2" class="btn waves-effect waves-light luluble-pink modal-trigger">PRINT TRIAL</a>
+                        <div class="modal" id="makeTrial2">
+                            <div style="padding: 5% 5% 5% 5%">
+                                {{!-- <b><span>Add a New Ingredient</span></b> --}}
+                                <h1 style="font-size:40px;">Print Trial {{trial_num}}</h1>
+
+                                {{!-- somehow get the formula of the tab clicked on --}}
+                                <form method="POST" action="/projects/{{project_id}}/{{trial_num}}/makeformsubmit">
+                                    <article class="regular">
+                                        {{!-- <h2>Textbook</h2> --}}
+
+                                        {{!-- Field 1 --}}
+                                        <b><label for="tuluble">Quantity ({{unit}}):</label></b>
+                                        <input type="range" min = "0" max = "100" name = "userInput1" id="userInput1">
+                                        <p> </p>
+                                        {{!-- USE MATH IN SQL TO FIND MAX VAL --}}
+
+                                       
+                                        <div class="make_trial_button">
+                                            <button id = "make_trial_button2" type="submit">Make Trial</button>
+                                            {{!-- <a id="add_button" class="btn waves-effect waves-light luluble-pink">Add Ingredient</a> --}}
+                                        </div>
+                                        <p> </p>
+                                    </form>
+                                </article>
+                            </div>
+                        </div>
+                    </td>
+
                     </table>
                 </div>
 
@@ -369,7 +464,28 @@
                         });
                     </script>
 
-             
+                    <script>
+                        $(document).ready(function() {
+                            $("#make_trial_button").click(function() {
+                            var inputValue1 = $("#userInput1").val();
+                          
+                            window.location += "/makeformsubmit";
+                            //$(window).attr("location", "inventoryformsubmit/" + inputValue1);
+                            });
+                        });
+                    </script>
+
+                    <script>
+                        $(document).ready(function() {
+                            $("#make_trial_button2").click(function() {
+                            var inputValue1 = $("#userInput1").val();
+                          
+
+                            window.location += "/makeformsubmit";
+                            //$(window).attr("location", "inventoryformsubmit/" + inputValue1);
+                            });
+                        });
+                    </script>
             
 
 
