Form Edits, etc.

--- a/views/formulas.hbs
+++ b/views/formulas.hbs
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
         <script type="text/javascript" src="/routes/projects.js"></script>
+        <link rel="stylesheet" href="/styles/color.css">
 
     </head>
     <style>
